Update NicModAnalyzer.ps1